# SECURE_COMMUNICATION_FIRMWARE

./: .gitignore  CMakeLists.txt  README.md  SECURITY.md  UPLOAD_TO_GITHUB.ps1  VALIDATION.md  partitions.csv  requirements-dev.txt  sdkconfig.defaults
docs/presentation/: secure_comm_firmware_project_presentation.pptx
docs/screenshots/: README.md
main/: CMakeLists.txt  Kconfig.projbuild  app_main.c  crypto_engine.c  crypto_engine.h  ota_manager.c  ota_manager.h  peer_store.c  peer_store.h  protocol.c  protocol.h  session_manager.c  session_manager.h  tls_transport.c  tls_transport.h  wifi_manager.c  wifi_manager.h
main/certs/: README.md  client.key
scripts/: build.ps1  build.sh  flash.ps1  flash.sh  monitor.ps1  monitor.sh
server/: README.md  https_file_server.py  relay_server.py  requirements.txt
tests/: test_protocol_model.py
tools/: configure_device.py  export_relay_bundle.py  generate_dev_pki.py  verify_environment.py
